--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-color: yellow;
+  background-color: #ffdd65;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -18,6 +18,7 @@ body {
   height: 300px;
   background-color: rgba(225, 225, 255, 0.8);
   border-radius: 50%;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
   border: 2px solid black;
   position: relative;
 }
